<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--設定-->
    <item
        android:title="@string/TitleSetting"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences"
        android:onClick="clickPreferences">
    </item>

    <!-- 為選單項目加入「android:onClick」設定 -->
    <item
        android:id="@+id/search_item"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/SEARCH"
        app:showAsAction="always"
        android:onClick="clickMenuItem" />

    <item
        android:id="@+id/add_item"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/ADD"
        app:showAsAction="always"
        android:onClick="clickMenuItem" />

    <item
        android:id="@+id/revert_item"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/REVERT"
        app:showAsAction="always"
        android:onClick="clickMenuItem" />

    <item
        android:id="@+id/delete_item"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/DELETE"
        app:showAsAction="always"
        android:onClick="clickMenuItem" />
</menu>